# sublang

./: .env.example  README.md  config.py  main.py  pyproject.toml  requirements.txt
demo/tig/: description.md  gen_specs.sh  specs.md
prompts/: code_review.txt  concept_explanation.txt  design_specs.txt  general.txt  getting_started.txt  technical_support.txt
specs/dev/: rules.md
src/: chatbot.py  nodes.py  prompt_loader.py  state.py
src/nodes/: __init__.py  classify_intent.py  design_specs.py  generate_response.py
src/sublang/: __init__.py  chatbot.py  cli.py  config.py  orchestrator.py  prompt_loader.py
src/sublang/chatbot/: __init__.py  chatbot.py
src/sublang/chatbot/nodes/: generate_response.py
src/sublang/chatbot/prompts/: classify_intent.md  classify_intent.txt  general.md
src/sublang/design_specs/: __init__.py  design_specs.py  utils.py
src/sublang/design_specs/nodes/: __init__.py  add_constraints.py  add_features.py  design_specs.py  extend_scenarios.py  extract_terms.py
src/sublang/design_specs/prompts/: add_constraints.md  add_constraints.txt  add_features.md  add_features.txt  extend_scenarios.md  extract_terms.md  extract_terms.txt  overall.md
src/sublang/nodes/: design_specs.py  generate_response.py
src/sublang/utils/: __init__.py  model_config.py  prompt_loader.py
